--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   "homepage": "https://github.com/susanrotondo/susan-class-group-practice#readme",
   "dependencies": {
     "body-parser": "^1.15.1",
+    "ejs": "^2.4.2",
     "express": "^4.14.0",
+    "express-ejs-layouts": "^2.1.0",
     "mongoose": "^4.5.0",
     "morgan": "^1.7.0"
   }
